--- a/app/src/main/res/layout/activity_passwords.xml
+++ b/app/src/main/res/layout/activity_passwords.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.nilsson83gmail.linus.todo.Passwords">
+    tools:context="com.nilsson83gmail.linus.todo.PasswordActivity">
 
 </android.support.constraint.ConstraintLayout>
