--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context="com.nilsson83gmail.linus.todo.MainActivity">
 
     <Button
-        android:id="@+id/toDos"
+        android:id="@+id/todoButton"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
@@ -22,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/shoppingLists"
+        android:id="@+id/shoppingButton"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="73dp"
@@ -31,11 +31,11 @@
         android:textSize="20sp"
         android:textColor="@color/colorAccent"
         android:background="@drawable/roundedbutton"
-        app:layout_constraintStart_toStartOf="@+id/toDos"
-        app:layout_constraintTop_toBottomOf="@+id/toDos" />
+        app:layout_constraintStart_toStartOf="@+id/todoButton"
+        app:layout_constraintTop_toBottomOf="@+id/todoButton" />
 
     <Button
-        android:id="@+id/passwords"
+        android:id="@+id/passwordButton"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="73dp"
@@ -44,6 +44,7 @@
         android:textSize="20sp"
         android:textColor="@color/colorAccent"
         android:background="@drawable/roundedbutton"
-        app:layout_constraintStart_toStartOf="@+id/shoppingLists"
-        app:layout_constraintTop_toBottomOf="@+id/shoppingLists" />
+        app:layout_constraintStart_toStartOf="@+id/shoppingButton"
+        app:layout_constraintTop_toBottomOf="@+id/shoppingButton" />
+
 </android.support.constraint.ConstraintLayout>
