--- a/app/src/main/res/layout/activity_passwords.xml
+++ b/app/src/main/res/layout/activity_passwords.xml
@@ -4,6 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/activity_passwords_background"
     tools:context="com.nilsson83gmail.linus.todo.PasswordActivity">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Passwords"/>
 
 </android.support.constraint.ConstraintLayout>
