--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#000</color>
     <color name="colorPrimaryDark">#FFF</color>
-    <color name="colorAccent">#FFF</color>
+    <color name="colorAccent">#ffffff</color>
 </resources>
