--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:text="Todo"
         android:textStyle="bold"
         android:textSize="20sp"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorWhite"
         android:background="@drawable/roundedbutton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,7 +29,7 @@
         android:text="Shopping"
         android:textStyle="bold"
         android:textSize="20sp"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorWhite"
         android:background="@drawable/roundedbutton"
         app:layout_constraintStart_toStartOf="@+id/todoButton"
         app:layout_constraintTop_toBottomOf="@+id/todoButton" />
@@ -42,7 +42,7 @@
         android:text="Passwords"
         android:textStyle="bold"
         android:textSize="20sp"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorWhite"
         android:background="@drawable/roundedbutton"
         app:layout_constraintStart_toStartOf="@+id/shoppingButton"
         app:layout_constraintTop_toBottomOf="@+id/shoppingButton" />
