--- a/app/src/main/res/layout/activity_shopping_list.xml
+++ b/app/src/main/res/layout/activity_shopping_list.xml
@@ -17,7 +17,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Name"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorWhite"
         app:layout_constraintBottom_toTopOf="@+id/etText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +30,7 @@
         android:layout_marginBottom="134dp"
         android:ems="10"
         android:inputType="textMultiLine"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorWhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
