--- a/app/src/main/res/layout/activity_todo_list.xml
+++ b/app/src/main/res/layout/activity_todo_list.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/activity_todo_list_background"
     tools:context="com.nilsson83gmail.linus.todo.TodoListActivity">
 
@@ -34,7 +35,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:src="@drawable/ic_activity_todo_list_fab"
-        android:tint="@color/colorPrimary"
         android:layout_margin="16dp"/>
 
 </FrameLayout>
