--- a/app/src/main/res/layout/todo_list_item.xml
+++ b/app/src/main/res/layout/todo_list_item.xml
@@ -8,7 +8,7 @@
         android:id="@+id/tv_todo_list_item"
         style="@style/TextAppearance.AppCompat.Large"
         android:background="@drawable/roundedbutton"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorWhite"
         android:textAlignment="center"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
